{
    "name": "ConsoleInputActions",
    "maps": [
        {
            "name": "Console",
            "id": "37564996-1bce-4fcf-ad4d-e5d0fbc4b443",
            "actions": [
                {
                    "name": "OpenConsole",
                    "type": "Button",
                    "id": "0eed67ac-416f-4778-9bcf-bb2f2e8e335e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Tab",
                    "type": "Button",
                    "id": "cfff2e2c-5856-4d83-9921-d58f37ae4914",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpArrrow",
                    "type": "Button",
                    "id": "19490d7f-93f5-4932-a735-0d8ccdc6ee0b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownArrow",
                    "type": "Button",
                    "id": "8b6cae79-8513-4c86-afb6-fa6ac03ef121",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "12e70b8c-7853-4d5f-9bbb-86b5b7a8abb8",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenConsole",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f746c38c-f1c8-4126-abea-7bbec19a5979",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae02527b-ac9f-49d2-b9e3-9e40bbc52fab",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpArrrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "221889e7-60ed-4506-9b42-bffa57339e29",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}